--- a/components/lessons/Grammar.module.scss
+++ b/components/lessons/Grammar.module.scss
@@ -20,6 +20,7 @@
   padding: 0.5rem 0.5rem 1rem;
   border-radius: 0.9rem;
   border: #f3f1ed solid 3px;
+  overflow: auto;
 }
 
 .button {
